--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,11 @@
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
+  /* --gradient-caffeine: linear-gradient(
+    to right,
+    oklch(0.646 0.222 41.116),
+    oklch(0.769 0.188 70.08)
+  ); */
 }
 
 .dark {
@@ -110,6 +115,11 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
+  /* --gradient-caffeine: linear-gradient(
+    to right,
+    oklch(0.488 0.243 264.376),
+    oklch(0.645 0.246 16.439)
+  ); */
 }
 
 @layer base {
